# parvum

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml  ruff.toml
.github/workflows/: alts-extract.yml  ci.yml  daily-feeds.yml  deploy-serving.yml  export-gold.yml  sync-review-queue.yml
alts-hitl/: README.md  pyproject.toml
alts-hitl/src/parvum_alts_hitl/: __init__.py  book.py  defects.py  evaluate.py  extract.py  generate.py  model.py  naming.py  parsing.py  render.py  validate.py
alts-hitl/tests/: test_book.py  test_defects.py  test_evaluate.py  test_extract.py  test_generate.py  test_render.py  test_validate.py  test_validate_integration.py
docs/: ARCHITECTURE.md  BUILD_LOG.md  DECISIONS.md  FILE_SCHEMAS.md  GLOSSARY.md  PERFORMANCE_METHODOLOGY.md  RUNNING.md
export/: pyproject.toml
export/src/parvum_export/: __init__.py  alts_document_loader.py  alts_document_source.py  databricks_auth.py  export_gold.py  gold_source.py  load_review_queue.py  loader.py  review_decision_source.py  review_decision_sync.py  review_queue_loader.py  review_queue_source.py  sync_review_decisions.py  tenants.py
export/tests/: conftest.py  test_alts_document_loader.py  test_gold_source.py  test_loader.py  test_review_decision_source.py  test_review_decision_sync.py  test_review_queue_loader.py  test_review_queue_source.py  test_tenants.py
infra/: docker-compose.yml
infra/terraform/: .terraform.lock.hcl  budget.tf  ecr.tf  ecs.tf  github_oidc.tf  network.tf  providers.tf  rds.tf  variables.tf
infra/terraform/bootstrap/: main.tf
ingest/: README.md  pyproject.toml
ingest/src/parvum_ingest/: __init__.py  accounts.py  book.py  build_master.py  defects.py  edgar.py  edgar_store.py  fetch_13f.py  freshness.py  generate.py  model.py  openfigi.py  ownership.py  securities_master.py  seed_13f.py
ingest/src/parvum_ingest/formats/: __init__.py  _xml.py  camt053.py  mt535.py  semt002.py
ingest/src/parvum_ingest/seed/: holdings_13f.json
ingest/tests/: conftest.py  test_book.py  test_camt053.py  test_defects.py  test_edgar.py  test_freshness.py  test_generate.py  test_model.py  test_mt535.py  test_openfigi.py  test_ownership.py  test_securities_master.py  test_semt002.py
ingest/tests/fixtures/: 13f_information_table.xml
ingest/tests/fixtures/edgar/cik=1067983/accession=000119312526054580/: filing.json  information_table.xml
ingest/tests/fixtures/edgar/cik=1067983/accession=000119312526226661/: filing.json  information_table.xml
ingest/tests/fixtures/edgar/cik=1166559/accession=000110465926062592/: filing.json  information_table.xml
ingest/tests/fixtures/edgar/cik=1336528/accession=000117266126002336/: filing.json  information_table.xml
internal/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
internal/src/: App.test.tsx  App.tsx  LoginPage.test.tsx  LoginPage.tsx  OpsPage.test.tsx  ReviewQueuePage.test.tsx  ReviewQueuePage.tsx  api.ts  styles.css  test-setup.ts  types.ts
internal/src/components/: Charts.tsx  PdfViewer.tsx
reference/: README.md  pyproject.toml
reference/src/parvum_reference/: __init__.py  domicile.py  ecb.py  fetch_fx.py  ownership.py  securities_master.py
reference/tests/: test_ecb.py  test_openfigi.py  test_ownership.py  test_securities_master.py
serving/: Dockerfile  README.md  pom.xml
serving/src/main/java/dev/parvum/serving/api/: ProjectionResource.java
serving/src/main/java/dev/parvum/serving/internal/: AltsReviewResource.java  AuthResource.java  InternalAuthFilter.java  InternalProjectionResource.java  InternalQuery.java  InternalSchema.java  SessionToken.java
serving/src/main/java/dev/parvum/serving/persistence/: JooqProducer.java
serving/src/main/java/dev/parvum/serving/tenancy/: TenantQuery.java  TenantSchemas.java
serving/src/main/resources/: application.properties
serving/src/main/resources/db/migration/: V1__gold_projection.sql  V2__ownership.sql  V3__performance.sql  V4__dq_metrics.sql  V5__alts.sql  V6__alts_currency.sql
serving/src/main/resources/db/migration_internal/: V1__alts_review_queue.sql  V2__alts_review_queue_stale_flag.sql  V3__alts_documents.sql
serving/src/test/java/dev/parvum/serving/: ProjectionEndpointsTest.java  ServingSmokeTest.java
serving/src/test/java/dev/parvum/serving/internal/: AltsReviewResourceTest.java  AuthResourceTest.java  InternalProjectionResourceTest.java
spark/: README.md  bronze_alts_ingest.py  bronze_ingest.py  dq_recon.py  gold_reports.py  silver_alts_documents.py  silver_cash.py  silver_positions.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  ClientDashboard.test.tsx  ClientDashboard.tsx  OpsPage.tsx  api.ts  format.test.ts  format.ts  palette.ts  styles.css  tenants.ts  test-setup.ts  types.ts
web/src/components/: Charts.tsx
