# Python project definition for the alts (private-fund) document pipeline
# (PEP 621) — see ingest/pyproject.toml for the pattern this mirrors.

[project]
name = "parvum-alts-hitl"
version = "0.1.0"
description = "Synthetic private-fund document generator and (later) extraction/review pipeline"
requires-python = ">=3.12"
dependencies = [
    # Validation at the model boundary, same reasoning as parvum-ingest.
    "pydantic>=2.7",
    # PDF rendering — the "real format" for this slice, same spirit as
    # ingest's ISO 20022/SWIFT renderers.
    "reportlab>=4.2",
    # Reads a rendered PDF back to text — used by extract.py at runtime
    # (not just tests, hence a main dependency rather than a dev one).
    "pypdf>=4.3",
    # LLM extraction (extract.py). Runs outside Databricks, in GitHub
    # Actions — see docs/ARCHITECTURE.md's fetch/process split. Two
    # providers (D-052): Anthropic direct, and OpenRouter (an
    # OpenAI-compatible gateway — hence the openai SDK, pointed at
    # OpenRouter's base URL rather than OpenAI's).
    "anthropic>=0.40",
    "openai>=1.50",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
parvum-generate-alts-docs = "parvum_alts_hitl.generate:main"
parvum-extract-alts-docs = "parvum_alts_hitl.extract:main"
parvum-eval-alts-extraction = "parvum_alts_hitl.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parvum_alts_hitl"]

# Ruff config is shared across the workspace: see <repo>/ruff.toml.

[tool.pytest.ini_options]
testpaths = ["tests"]
