# Python project definition for the ingestion layer (PEP 621).
# uv reads this to build the virtualenv and uv.lock pins exact versions,
# so CI and every dev machine resolve identical dependencies.

[project]
name = "parvum-ingest"
version = "0.1.0"
description = "Feed generator and wire-format parsers for the Parvum ingestion layer"
requires-python = ">=3.12"
dependencies = [
    # Validation at the model boundary is load-bearing here: feed data is
    # untrusted by definition, so every record is checked on construction.
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
parvum-generate = "parvum_ingest.generate:main"
parvum-fetch-13f = "parvum_ingest.fetch_13f:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parvum_ingest"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Beyond the defaults: import order (I), modernisation (UP), likely bugs (B),
# needless complexity (SIM). Kept strict from the first commit — retrofitting
# lint rules onto an existing codebase is far more painful.
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
