# Python project definition for the ingestion layer (PEP 621).
# uv reads this to build the virtualenv and uv.lock pins exact versions,
# so CI and every dev machine resolve identical dependencies.

[project]
name = "parvum-ingest"
version = "0.1.0"
description = "Feed generator and wire-format parsers for the Parvum ingestion layer"
requires-python = ">=3.12"
dependencies = [
    # Validation at the model boundary is load-bearing here: feed data is
    # untrusted by definition, so every record is checked on construction.
    "pydantic>=2.7",
    # The reference layer (account universe, domiciles, securities master).
    # Strictly one-directional: ingest consumes reference, never the reverse.
    "parvum-reference",
]

# Resolve the sibling from this workspace, not an index — the two packages
# version together in one repo and one lockfile.
[tool.uv.sources]
parvum-reference = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
parvum-generate = "parvum_ingest.generate:main"
parvum-fetch-13f = "parvum_ingest.fetch_13f:main"
parvum-build-master = "parvum_ingest.build_master:main"
parvum-check-freshness = "parvum_ingest.freshness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parvum_ingest"]

# Ruff config is shared across the workspace: see <repo>/ruff.toml.

[tool.pytest.ini_options]
testpaths = ["tests"]
